datainitilizer correcto